# little-scripts

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  constraints.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
apps/cli-tool/: setup.py
apps/cli-tool/cli_tool/: __init__.py  main.py
apps/web-app/: setup.py
apps/web-app/web_app/: __init__.py  main.py
colmodernvbert_fastapi/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
colmodernvbert_fastapi/app/: main.py
colmodernvbert_fastapi/app/api/: routes.py
colmodernvbert_fastapi/app/core/: config.py  logging.py
colmodernvbert_fastapi/app/models/: schemas.py
colmodernvbert_fastapi/app/services/: embedding_processor.py  model_service.py
colmodernvbert_fastapi/app/utils/: image_processing.py
colmodernvbert_fastapi/middleware/: __init__.py  request_id.py  timing.py
colnomic_qdrant_rag/: .env.local  .gitignore  README.md  config.py  docker-compose.yml  main.py  requirements.txt  utils.py
colnomic_qdrant_rag/core/: __init__.py  cli.py  command_registry.py  commands.py  error_handling.py  messaging.py  pipeline.py
colnomic_qdrant_rag/handlers/: __init__.py  minio.py  model.py  openai.py  qdrant.py
colqwen3.5-4B/: README.md  app.py  requirements.txt
colqwen_fastapi/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  README.md  app.py  constraints.txt  docker-compose.yml  generate_openapi.py  install_cuda.sh  openapi.json  requirements.txt
colqwen_omni/: .gitignore  README.md  app.py  main.py  requirements.txt  run_ui.py
deepseek-ocr/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
deepseek-ocr/app/: main.py
deepseek-ocr/app/api/: routes.py
deepseek-ocr/app/core/: config.py  logging.py
deepseek-ocr/app/models/: schemas.py
deepseek-ocr/app/services/: model_service.py  ocr_processor.py
deepseek-ocr/app/utils/: image_processing.py
duckdb_fastapi/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  main.py  requirements.txt
duckdb_fastapi/app/: __init__.py  main.py
duckdb_fastapi/app/api/: __init__.py  routes.py
duckdb_fastapi/app/core/: __init__.py  config.py  database.py  logging.py
duckdb_fastapi/app/middleware/: __init__.py  request_id.py  timing.py
duckdb_fastapi/app/models/: __init__.py  schemas.py
duckdb_fastapi/app/services/: __init__.py  duckdb_service.py
eomt_panoptic_seg/: README.md  app.py  requirements.txt
paddleocr_vl/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
paddleocr_vl/config/: __init__.py  logging_config.py  settings.py
paddleocr_vl/models/: __init__.py  api_models.py
paddleocr_vl/routers/: __init__.py  ocr_router.py
paddleocr_vl/services/: __init__.py  paddleocr_vl_service.py
scripts/: setup.py
scripts/clipcap/: app.py  pyproject.toml  requirements.txt
shared/: __init__.py  utils.py
tests/: test_core.py
vespa_vision_rag/: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  docker-compose.yml  main.py  requirements.txt
vespa_vision_rag/data/: __init__.py  processor.py
vespa_vision_rag/models/: __init__.py  colqwen_handler.py
vespa_vision_rag/pdf/: __init__.py  processor.py
vespa_vision_rag/search/: __init__.py  client.py
vespa_vision_rag/utils/: __init__.py  display.py
vidore_benchmark/: README.md  app.py  requirements.txt  setup.sh
vjepa2/: README.md  app.py  requirements.txt
z-image-turbo/: .env.example  .gitignore  README.md  app.py  config.py  generator.py  install.sh  install_flash_attn.sh  models.py  pe.py  prompt_expander.py  requirements.txt  translations.py  ui.py  utils.py
