[tool.poetry]
name = "little-scripts"
version = "0.1.0"
description = "A collection of small Python scripts and tools"
authors = ["athra"]
readme = "README.md"
packages = [
    { include = "colnomic_qdrant_rag" },
    { include = "eomt_panoptic_seg" },
]

[tool.poetry.dependencies]
python = "^3.10"
# Common dependencies
requests = "*"
python-dotenv = "*"
pillow = "*"
numpy = "*"
tqdm = "*"
# PyTorch (will be installed via pip for nightly builds)
# torch = "*"  # Commented out - install via pip with nightly index

[tool.poetry.group.dev.dependencies]
# Development tools
pre-commit = "*"
ruff = "*"

[tool.poetry.group.colnomic]
optional = true

[tool.poetry.group.colnomic.dependencies]
# ColPali and related models
# torch = "*"  # Installed via pip with nightly index
colpali-engine = "*"
transformers = ">=4.53.1"  # Use latest stable version, avoiding git repo

# HuggingFace ecosystem
datasets = "*"
huggingface-hub = {extras = ["hf_transfer"], version = "*"}

# Vector database
qdrant-client = "*"

# OpenAI integration
openai = "*"

# Object Storage
minio = "*"

# Utilities
stamina = "*"
pypdf = "*"

# PDF to Image Conversion
pdf2image = "*"

[tool.poetry.group.panoptic]
optional = true

[tool.poetry.group.panoptic.dependencies]
# Core ML and Computer Vision
# torch = "*"  # Installed via pip with nightly index
# torchvision = "*"  # Installed via pip with nightly index
transformers = ">=4.53.1"  # Use latest stable version, avoiding git repo
opencv-python = "*"
scipy = "*"

# Gradio web interface
gradio = "*"

# Visualization
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
